Ajout du style pour le pied de page dans global.css et suppression du style redondant dans stockage.css. Ajustements mineurs dans architecture.css pour améliorer l'alignement et la présentation des cartes d'analogie.

--- a/css/global.css
+++ b/css/global.css
@@ -73,3 +73,10 @@ nav ul li a:hover {
 }
 
 
+footer {
+    text-align: center;
+    padding: 40px 0;
+    border-top: 1px solid var(--bg-card);
+    color: var(--text-main);
+    margin-top: 50px;
+}
