--- a/css/stockage.css
+++ b/css/stockage.css
@@ -11,7 +11,7 @@ main {
     padding: 100px 20px;
     /* Dégradé sombre pour garantir la lisibilité du texte blanc */
     background: linear-gradient(rgba(11, 12, 16, 0.8), rgba(11, 12, 16, 0.8)),
-        url('http://googleusercontent.com/image_collection/image_retrieval/10996947449689409229_0');
+        url('https://media.ldlc.com/mkt/ldlc/fr/guides/ssd-hdd/couverture.jpg');
     background-size: cover;
     background-position: center;
     border-bottom: 2px solid var(--accent-cyan);
